# rollups-node

./: .dockerignore  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .golangci.yml  .markdownlint.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV2DEV.md  Dockerfile  Makefile  README.md  compose.individual-services.yaml  compose.yaml  docker-bake.hcl  docker-bake.override.hcl  gitpod.dockerfile  go.mod  go.sum  setup_env.sh  shell.nix  tools.go  upgrade_test.sh
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/: .scopes.txt  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  technical-debt.md  update-dependencies.md
.github/license-check/: config.json  header.txt
.github/workflows/: build.yml  changelog-check.yml  changelog.yml  code-quality.yml  (+6 more)
cmd/authority-claimer/: Cargo.toml  README.md  build.rs
cmd/authority-claimer/src/: checker.rs  claimer.rs  config.rs  contracts.rs  http_server.rs  lib.rs  listener.rs  log.rs  main.rs  metrics.rs  redacted.rs  repository.rs  sender.rs  test_fixtures.rs
cmd/authority-claimer/src/config/: cli.rs  contracts.rs  error.rs  mod.rs
cmd/authority-claimer/src/rollups_events/: broker.rs  common.rs  mod.rs  rollups_claims.rs  rollups_stream.rs
cmd/authority-claimer/src/signer/: aws_signer.rs  mod.rs  signer.rs
cmd/authority-claimer/src/types/: blockchain_config.rs  error.rs  mod.rs  utils.rs
dev/: tools.go
devnet/: README.md  docker-compose.yml
docs/: .gitignore  .markdownlint.yaml  architecture.md  cartesi-rollups-cli.md  cartesi-rollups-cli_deps.md  cartesi-rollups-cli_deps_start.md  cartesi-rollups-cli_execute.md  cartesi-rollups-cli_increase-time.md  cartesi-rollups-cli_inspect.md  cartesi-rollups-cli_read.md  cartesi-rollups-cli_read_input.md  cartesi-rollups-cli_read_inputs.md  cartesi-rollups-cli_read_notice.md  cartesi-rollups-cli_read_notices.md  cartesi-rollups-cli_read_report.md  cartesi-rollups-cli_read_reports.md  cartesi-rollups-cli_read_voucher.md  cartesi-rollups-cli_read_vouchers.md  cartesi-rollups-cli_save-snapshot.md  cartesi-rollups-cli_send.md  cartesi-rollups-cli_validate.md  code_of_conduct.md  config.md  development.md  release.md  run-natively.md  run-without-docker.md  upgrade_to_1_5.md
offchain/: Cargo.toml  Dockerfile
offchain/advance-runner/: Cargo.toml  README.md
offchain/advance-runner/src/: broker.rs  config.rs  dapp_contract.rs  error.rs  lib.rs  main.rs  runner.rs
offchain/advance-runner/src/server_manager/: config.rs  conversions.rs  facade.rs
offchain/advance-runner/src/snapshot/: config.rs  disabled.rs  fs_manager.rs  mod.rs
offchain/advance-runner/tests/: host_integration.rs  server_integration.rs
offchain/advance-runner/tests/fixtures/: mod.rs
offchain/authority-claimer/: Cargo.toml  README.md
offchain/authority-claimer/src/: broker_mock.rs  checker.rs  claimer.rs  lib.rs  listener.rs  main.rs  sender.rs
offchain/authority-claimer/src/config/: cli.rs  contracts.rs  error.rs  json.rs  mod.rs
offchain/authority-claimer/src/signer/: signer.rs
offchain/contracts/: Cargo.toml  build.rs
offchain/contracts/src/: lib.rs
offchain/data/: Cargo.toml  README.md
offchain/data/migrations/20230921143147_completion_status/: down.sql  up.sql
offchain/data/src/: config.rs  lib.rs  repository.rs  schema.rs  types.rs
offchain/data/tests/: repository.rs
offchain/dispatcher/: Cargo.toml  README.md
offchain/dispatcher/src/: config.rs  dispatcher.rs  error.rs  lib.rs  main.rs  setup.rs
offchain/dispatcher/src/drivers/: context.rs  machine.rs  mock.rs  mod.rs
offchain/dispatcher/src/machine/: mod.rs  rollups_broker.rs
offchain/dispatcher/src/signer/: aws_signer.rs  signer.rs
offchain/eth-input-reader/: Cargo.toml  README.md
offchain/eth-input-reader/src/: config.rs  error.rs  eth_input_reader.rs  lib.rs  main.rs  metrics.rs  setup.rs
offchain/eth-input-reader/src/machine/: context.rs  driver.rs  mock.rs  mod.rs  rollups_broker.rs
offchain/graphql-server/: Cargo.toml
offchain/graphql-server/src/: config.rs  lib.rs  main.rs
offchain/graphql-server/src/schema/: resolvers.rs  scalar.rs
offchain/graphql-server/tests/: integration.rs
offchain/graphql-server/tests/queries/: input.json
offchain/graphql-server/tests/responses/: input.json
offchain/grpc-interfaces/: build.rs
offchain/host-runner/: Cargo.toml
offchain/host-runner/src/: config.rs  controller.rs  main.rs
offchain/host-runner/src/merkle_tree/: complete.rs
offchain/host-runner/tests/common/: grpc_client.rs
offchain/host-runner/tests/grpc_tests/: get_version.rs
offchain/http-health-check/: Cargo.toml
offchain/http-health-check/src/: lib.rs
offchain/http-server/: Cargo.toml
offchain/http-server/src/: lib.rs
offchain/indexer/: Cargo.toml
offchain/indexer/src/: config.rs  conversions.rs  indexer.rs  lib.rs  main.rs
offchain/indexer/tests/: integration.rs
offchain/inspect-server/: Cargo.toml
offchain/inspect-server/src/: config.rs  inspect.rs  lib.rs  main.rs  server.rs
offchain/inspect-server/tests/: payload.rs  queue.rs  response.rs
offchain/inspect-server/tests/common/: mod.rs
offchain/log/: Cargo.toml  build.rs
offchain/log/src/: lib.rs
offchain/rollups-events/: Cargo.toml
offchain/rollups-events/src/: common.rs  lib.rs  rollups_claims.rs  rollups_outputs.rs  rollups_stream.rs
offchain/rollups-events/src/broker/: mod.rs
offchain/rollups-events/tests/: integration.rs
offchain/rollups-http-client/src/: client.rs
offchain/state-fold-test/: Cargo.toml
offchain/state-fold-types/: Cargo.toml
offchain/state-server/: Cargo.toml
offchain/state-server/src/: config.rs  error.rs  lib.rs  main.rs
offchain/test-fixtures/docker/: server_manager_nonroot.Dockerfile
offchain/test-fixtures/src/: broker.rs  echo_dapp.rs  machine_snapshots.rs  repository.rs
offchain/types/: Cargo.toml
offchain/types/src/: blockchain_config.rs  foldables.rs  lib.rs  user_data.rs
offchain/types/src/foldables/: claims.rs  input_box.rs
test/: config.go  echo_test.go
(+405 files in other folders)
