[workspace]
resolver = "2"
members = [
  "advance-runner",
  "authority-claimer",
  "contracts",
  "data",
  "dispatcher",
  "graphql-server",
  "grpc-interfaces",
  "host-runner",
  "http-health-check",
  "http-server",
  "indexer",
  "inspect-server",
  "log",
  "redacted",
  "rollups-events",
  "rollups-http-client",
  "state-server",
  "test-fixtures",
  "types",
]

[workspace.package]
version = "1.2.0"
license = "Apache-2.0"
edition = "2021"

# This list is sorted alphabetically.
[workspace.dependencies]
actix-cors = "0.6"
actix-web = "4.4"
anyhow = "1.0"
async-trait = "0.1"
awc = "3.2"
axum = "0.6"
backoff = "0.4"
base64 = "0.21"
built = "0.6"
byteorder = "1.4"
clap = "4.4"
diesel = "2.1"
diesel_migrations = "2.1"
env_logger = "0.10"
ethabi = "18.0"
eth-block-history = "0.9"
eth-state-client-lib = "0.9"
eth-state-fold-types = "0.9"
eth-state-fold = "0.9"
eth-state-server-lib = "0.9"
eth-tx-manager = "0.10"
ethers = "1.0"
ethers-signers = "1.0"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hyper = "0.14"
im = "15"
json = "0.12"
juniper = "0.15"
log = "0.4"
mockall = "0.11"
prometheus-client = "0.21"
prost = "0.11"
rand = "0.8"
redis = "0.23"
regex = "1"
reqwest = "0.11"
rusoto_core = "0.48"
rusoto_kms = "0.48"
rusoto_sts = "0.48"
serde = "1"
serde_json = "1"
serial_test = "2.0"
sha3 = "0.10"
snafu = "0.7"
tempfile = "3.8"
testcontainers = "0.14"
test-log = "0.2"
tokio = "1"
tokio-stream = "0.1"
toml = "0.8"
tonic = "0.9"
tonic-build = "0.9"
tonic-health = "0.9"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = "0.3"
tracing-test = "0.2"
url = "2"
users = "0.11"
uuid = "1.4"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
