[package]
name = "authority-claimer"
version = "2.0.0"
license = "Apache-2.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "cartesi-rollups-authority-claimer"
path = "src/main.rs"
test = false

[dependencies]
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
clap = {version = "4.5", features = ["string", "derive", "env"]}
ethers = "1.0"
ethers-signers = {version = "1.0", features = ["aws"]}
eth-tx-manager = "0.10"
hex = "0.4"
prometheus-client = "0.22"
reqwest = "=0.11.24" # Set specific reqwest version to fix the build
rusoto_core = "0.48"
rusoto_kms = "0.48"
rusoto_sts = "0.48"
sea-query = "0.30.7"
sea-query-binder = {version="0.5.0", features=["sqlx-postgres"]}
serde = "1.0"
serde_json = "1.0"
snafu = "0.8"
sqlx = {version="0.7", features=["runtime-async-std", "postgres", "rust_decimal"]}
tokio = {version = "1.37", features = ["macros", "rt-multi-thread", "rt"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[build-dependencies]
ethers = "1.0"

[dev-dependencies]
serial_test = "3.0"
tracing-test = {version = "0.2", features = ["no-env-filter"]}

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[package.metadata.cargo-machete]
ignored = ["reqwest"]
