[package]
name = "advance-runner"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "cartesi-rollups-advance-runner"
path = "src/main.rs"

[dependencies]
contracts = { path = "../contracts" }
grpc-interfaces = { path = "../grpc-interfaces" }
http-health-check = { path = "../http-health-check" }
log = { path = "../log" }
rollups-events = { path = "../rollups-events" }

async-trait.workspace = true
backoff = { workspace = true, features = ["tokio"] }
clap = { workspace = true, features = ["derive", "env"] }
ethers.workspace = true
hex.workspace = true
sha3 = { workspace = true, features = ["std"] }
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tonic.workspace = true
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

env_logger.workspace = true
rand.workspace = true
tempfile.workspace = true
test-log = { workspace = true, features = ["trace"] }
testcontainers.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
