[package]
name = "authority-claimer"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "cartesi-rollups-authority-claimer"
path = "src/main.rs"
test = false

[dependencies]
http-server = { path = "../http-server" }
log = { path = "../log" }
rollups-events = { path = "../rollups-events" }

async-trait.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eth-tx-manager.workspace = true
rusoto_core.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

backoff = { workspace = true, features = ["tokio"] }
testcontainers.workspace = true
