[package]
name = "dispatcher"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "cartesi-rollups-dispatcher"
path = "src/main.rs"

[dependencies]
http-server = { path = "../http-server" }
log = { path = "../log" }
rollups-events = { path = "../rollups-events" }
types = { path = "../types" }

async-trait.workspace = true
axum.workspace = true
backoff = { workspace = true, features = ["tokio"] }
clap = { workspace = true, features = ["derive", "env"] }
eth-state-client-lib.workspace = true
eth-state-fold-types = { workspace = true, features = ["ethers"] }
futures.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

im = { workspace = true, features = ["serde"] }
rand.workspace = true
redis.workspace = true
serial_test.workspace = true
testcontainers.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
