[package]
name = "http-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
clap = { workspace = true, features = ["derive", "env", "string"] }
hyper.workspace = true
prometheus-client.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing.workspace = true
