[package]
name = "inspect-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "cartesi-rollups-inspect-server"
path = "src/main.rs"

[dependencies]
grpc-interfaces = { path = "../grpc-interfaces" }
http-health-check = { path = "../http-health-check" }
log = { path = "../log" }

actix-cors.workspace = true
actix-web.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
hex.workspace = true
serde = { workspace = true, features = ["rc", "derive"] }
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
serial_test.workspace = true
