[package]
name = "state-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "cartesi-rollups-state-server"
path = "src/main.rs"

[dependencies]
log = { path = "../log" }
types = { path = "../types" }

clap = { workspace = true, features = ["derive", "env"] }
eth-block-history.workspace = true
eth-state-fold-types.workspace = true
eth-state-fold.workspace = true
eth-state-server-lib.workspace = true
serde.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread"] }
tonic.workspace = true
tracing.workspace = true
url.workspace = true
