[package]
name = "types"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../contracts" }
rollups-events = { path = "../rollups-events" }

anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eth-state-fold-types = { workspace = true, features = ["ethers"] }
eth-state-fold.workspace = true
futures.workspace = true
im = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
snafu.workspace = true

[dev-dependencies]
serde_json.workspace = true
